PLD-COMP-RENDU/pld-comp/tests/ifcc-test-output/testfiles-test-erreurs-Test-4_5-208_express_unaire_neg_invalide/gcc-compile.txt
input.c: In function ‘main’:
input.c:3:7: error: lvalue required as left operand of assignment
    3 |     !x=5;
      |       ^

return code: 1
